==> you93887/TI/demo/3、OLED显示屏驱动/Drivers/OLED.c <==
#include "headfile.h"
#include "gpio.h"
#include "string.h"
#include "oledfont.h"
#include "oled.h"
#include "stdlib.h"
#include "SystickTime.h"
#include "ssd1306.h"
#define	u8 unsigned char
#define	u16 unsigned int
#define	u32 unsigned long
#define XLevelL  	0x00
#define XLevelH  	0x10
#define XLevel    ((XLevelH&0x0F)*16+XLevelL)
#define Max_Column 	128
#define Max_Row  	64
#define Brightness 	0xCF
#define X_WIDTH 	128
#define Y_WIDTH 	64

void OLED_GPIO_Init(void)
{
  SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIO_OLED);// Enable the GPIO port that is used for the on-board LED.
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_5);
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_4);
  Delay_Ms(2);
  GPIOPinWrite(GPIO_OLED, GPIO_PIN_5, GPIO_PIN_5);//设置高
  GPIOPinWrite(GPIO_OLED, GPIO_PIN_4, GPIO_PIN_4);//设置高
}

void SDA_OUT(void)
{
	GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_4);
}

void SDA_IN(void)
{
  GPIOPinTypeGPIOInput(GPIO_OLED, GPIO_PIN_4);
}

void OLEDInit(void)
{
  LCD_RSTout(Bit_RESET);
  Delay_Ms(100);
  LCD_RSTout(Bit_SET);//等待RC复位完毕
  
  LCD_WrCmd(0xae);		//--turn off oled panel
  LCD_WrCmd(0x00);		//---set low column address
  LCD_WrCmd(0x10);		//---set high column address
  LCD_WrCmd(0x40);		//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
  LCD_WrCmd(0x81);		//--set contrast control register
  LCD_WrCmd(0xcf); 		// Set SEG Output Current Brightness
  LCD_WrCmd(0xa0);		//--Set SEG/Column Mapping     0xa0???? 0xa1??
  LCD_WrCmd(0xc0);		//Set COM/Row Scan Direction   0xc0???? 0xc8??
  LCD_WrCmd(0xa6);		//--set normal display
  LCD_WrCmd(0xa8);		//--set multiplex ratio(1 to 64)
  LCD_WrCmd(0x3f);		//--1/64 duty
  LCD_WrCmd(0xd3);		//-set display offset Shift Mapping RAM Counter (0x00~0x3F)
  LCD_WrCmd(0x00);		//-not offset
  LCD_WrCmd(0xd5);		//--set display clock divide ratio/oscillator frequency
  LCD_WrCmd(0x80);		//--set divide ratio, Set Clock as 100 Frames/Sec
  LCD_WrCmd(0xd9);		//--set pre-charge period
  LCD_WrCmd(0xf1);		//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
  LCD_WrCmd(0xda);		//--set com pins hardware configuration
  LCD_WrCmd(0x12);
  LCD_WrCmd(0xdb);		//--set vcomh
  LCD_WrCmd(0x40);		//Set VCOM Deselect Level
  LCD_WrCmd(0x20);		//-Set Page Addressing Mode (0x00/0x01/0x02)
  LCD_WrCmd(0x02);		//
  LCD_WrCmd(0x8d);		//--set Charge Pump enable/disable
  LCD_WrCmd(0x14);		//--set(0x10) disable
  LCD_WrCmd(0xa4);		// Disable Entire Display On (0xa4/0xa5)
  LCD_WrCmd(0xa6);		// Disable Inverse Display On (0xa6/a7)
  LCD_WrCmd(0xaf);		//--turn on oled panel
  LCD_Fill(0x00);  		//初始清屏
  LCD_Set_Pos(0,0);
}

void OLED_Init(void)
{
#ifdef OLED_WORK_MODE_I2C 
  OLED_GPIO_Init();
  //OLED_Init_I2C();
  ssd1306_begin(SSD1306_SWITCHCAPVCC);   
#else
  SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIO_OLED);// Enable the GPIO port that is used for the on-board LED.
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_2);
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_3);
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_4);
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_PIN_5);	
  Delay_Ms(2);
  //OLEDInit();
  LCD_RSTout(Bit_RESET);
  Delay_Ms(100);
  LCD_RSTout(Bit_SET);//等待RC复位完毕
  ssd1306_begin(SSD1306_SWITCHCAPVCC);  
#endif
  Draw_Logo();
  LCD_CLS();
}
